--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.info-box {
+  background: #ffffff;
+  border: 1px solid #c9c9c9;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  width: 320px;
+  height: 320px;
+  padding-top: 10rem;
+  padding-bottom: 2rem;
+  font-size: 15em;
+}
+
+.stats-box {
+  margin: 40px 0px;
+  color: #5f5f5f;
+}
