--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,217 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sx-4">
+      <div class="info-box text-center">
+          5
+      </div>
+    </div>
+    <div class="col-sx-8">
+      <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Día</th>
+                  <th>Tareas</th>
+                  <th>Proyectos</th>
+                  <th>Trabajo</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>L</td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>J</td>
+                    <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>V</td>
+                    <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input checked="checked"
+                               class="form-check-input"
+                               type="checkbox"
+                               id="blankCheckbox"
+                               value="option1" aria-label="...">
+                      </label>
+                    </div>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>S/D</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
+</div>
+
