--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 @import "bootstrap";
 
 @import "welcome";
-@import "1st_load_framework";
+@import "font-awesome-sprockets";
+@import "font-awesome";
