--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,11 +8,21 @@
   -moz-border-radius: 3px;
   border-radius: 3px;
   width: 320px;
-  height: 320px;
+  height: 336px;
   font-size: 15em;
 }
 
 .stats-box {
   margin: 40px 0px;
   color: #5f5f5f;
+}
+
+span.checkmark {
+  color: #043e9b;
+  font-size: 22px;
+}
+
+span.failed {
+  color: #ff0c00;
+  font-size: 22px;
 }
