--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-sx-4">
       <div class="info-box text-center">
-          5
+          4
+      </div>
+      <div>
+        <span>Nov 28 - Dic 3</span>
       </div>
     </div>
     <div class="col-sx-8">
@@ -13,6 +16,8 @@
                   <th>Tareas</th>
                   <th>Proyectos</th>
                   <th>Trabajo</th>
+                  <th>En la escuela</th>
+                  <th>En la casa</th>
                   <th>Total</th>
                 </tr>
               </thead>
@@ -20,190 +25,152 @@
                 <tr>
                   <td>L</td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>M</td>
                     <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>M</td>
                     <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
-                  <td>1</td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>0</td>
                 </tr>
                 <tr>
                   <td>J</td>
                     <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>V</td>
                     <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input checked="checked"
-                               class="form-check-input"
-                               type="checkbox"
-                               id="blankCheckbox"
-                               value="option1" aria-label="...">
-                      </label>
-                    </div>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
                   </td>
                   <td>1</td>
                 </tr>
                 <tr>
                   <td>S/D</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
