--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -180,5 +180,186 @@
             </table>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sx-4">
+      <div class="info-box text-center">
+          4
+      </div>
+      <div>
+        <span>Dic 4 - Dic 10</span>
+      </div>
+    </div>
+    <div class="col-sx-8">
+      <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Día</th>
+                  <th>Tareas</th>
+                  <th>Proyectos</th>
+                  <th>Trabajo</th>
+                  <th>En la escuela</th>
+                  <th>En la casa</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>L</td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>0</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>J</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>V</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>S/D</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
 </div>
 
