Fixing the layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  */
 @import "bootstrap";
-
-@import "welcome";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "main";
+@import "welcome";
