--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,6 +10,9 @@
   width: 320px;
   height: 336px;
   font-size: 15em;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 290px;
 }
 
 .stats-box {
@@ -25,4 +28,24 @@ span.checkmark {
 span.failed {
   color: #ff0c00;
   font-size: 22px;
+}
+
+.stats-box-all-info {
+  text-align: center;
+  font-weight: bold;
+  font-size: 48px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 2px;
 }
