--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,9 @@
 
   <body>
     <header>
-      <%#= render 'layouts/navigation' %>
+      <%= render 'layouts/navigation' %>
     </header>
     <main role="main">
-       <%#= render 'layouts/messages' %>
        <%= yield %>
     </main>
   </body>
