--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,26 @@
 <div class="container">
   <div class="row">
-    <div class="col-sx-4">
+    <div class="col-md-6">
+      &nbsp;
+    </div>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="stats-box-all-info pull-right">
+          <i class="fa fa-address-card-o" aria-hidden="true"></i> 64
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
       <div class="info-box text-center">
-          4
+          20
       </div>
       <div>
         <span>Nov 28 - Dic 3</span>
       </div>
     </div>
-    <div class="col-sx-8">
+    <div class="col-md-8">
       <table class="table table-striped">
               <thead>
                 <tr>
@@ -49,7 +61,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>M</td>
@@ -78,7 +90,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>M</td>
@@ -107,7 +119,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>0</td>
+                  <td>4</td>
                 </tr>
                 <tr>
                   <td>J</td>
@@ -136,7 +148,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>V</td>
@@ -165,7 +177,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>S/D</td>
@@ -181,15 +193,196 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sx-4">
+    <div class="col-md-4">
       <div class="info-box text-center">
-          4
+          19
       </div>
       <div>
         <span>Dic 4 - Dic 10</span>
       </div>
     </div>
-    <div class="col-sx-8">
+    <div class="col-md-8">
+      <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Día</th>
+                  <th>Tareas</th>
+                  <th>Proyectos</th>
+                  <th>Trabajo</th>
+                  <th>En la escuela</th>
+                  <th>En la casa</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>L</td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>3</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                  <td>J</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                  <td>V</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="failed">
+                      <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>4</td>
+                </tr>
+                <tr>
+                  <td>S/D</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="info-box text-center">
+          25
+      </div>
+      <div>
+        <span>Dic 11 - Dic 17</span>
+      </div>
+    </div>
+    <div class="col-md-8">
       <table class="table table-striped">
               <thead>
                 <tr>
@@ -226,11 +419,11 @@
                     </span>
                   </td>
                   <td>
-                    <span class="failed">
-                      <i class="fa fa-times" aria-hidden="true"></i>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>0</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>M</td>
@@ -259,7 +452,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>M</td>
@@ -288,7 +481,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>J</td>
@@ -317,7 +510,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>V</td>
@@ -346,7 +539,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>1</td>
+                  <td>5</td>
                 </tr>
                 <tr>
                   <td>S/D</td>
