--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,8 @@
       <div class="info-box text-center">
           20
       </div>
-      <div>
+      <div class="date-container">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
         <span>Nov 28 - Dic 3</span>
       </div>
     </div>
@@ -197,7 +198,8 @@
       <div class="info-box text-center">
           19
       </div>
-      <div>
+      <div class="date-container">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
         <span>Dic 4 - Dic 10</span>
       </div>
     </div>
@@ -378,7 +380,8 @@
       <div class="info-box text-center">
           25
       </div>
-      <div>
+      <div class="date-container">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
         <span>Dic 11 - Dic 17</span>
       </div>
     </div>
