--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,7 +12,7 @@
   font-size: 15em;
   text-align: center;
   vertical-align: middle;
-  line-height: 290px;
+  line-height: 1.7em;
 }
 
 .stats-box {
