--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="date-container">
         <i class="fa fa-calendar" aria-hidden="true"></i>
-        <span>Nov 28 - Dic 3</span>
+        <span>Nov 28 - Dic 3 2017</span>
       </div>
     </div>
     <div class="col-md-8">
@@ -200,7 +200,7 @@
       </div>
       <div class="date-container">
         <i class="fa fa-calendar" aria-hidden="true"></i>
-        <span>Dic 4 - Dic 10</span>
+        <span>Dic 4 - Dic 10 2017</span>
       </div>
     </div>
     <div class="col-md-8">
@@ -382,7 +382,7 @@
       </div>
       <div class="date-container">
         <i class="fa fa-calendar" aria-hidden="true"></i>
-        <span>Dic 11 - Dic 17</span>
+        <span>Dic 11 - Dic 17 2017</span>
       </div>
     </div>
     <div class="col-md-8">
