Testing react/redux

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,7 @@
       </div>
     </div>
   </div>
+  <!-- First Row Starts -->
   <div class="row">
     <div class="col-md-4">
       <div class="info-box text-center">
@@ -18,7 +19,7 @@
       </div>
       <div class="date-container">
         <i class="fa fa-calendar" aria-hidden="true"></i>
-        <span>Nov 28 - Dic 3 2017</span>
+        <span>Nov 27 - Dic 3 2017</span>
       </div>
     </div>
     <div class="col-md-8">
@@ -193,10 +194,11 @@
             </table>
     </div>
   </div>
+  <!-- First Row Ends -->
   <div class="row">
     <div class="col-md-4">
       <div class="info-box text-center">
-          19
+          18
       </div>
       <div class="date-container">
         <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -336,9 +338,9 @@
                 <tr>
                   <td>V</td>
                     <td>
-                    <span class="checkmark">
-                      <i class="fa fa-check" aria-hidden="true"></i>
-                    </span>
+                      <span class="failed">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                      </span>
                   </td>
                   <td>
                     <span class="checkmark">
@@ -360,7 +362,7 @@
                       <i class="fa fa-check" aria-hidden="true"></i>
                     </span>
                   </td>
-                  <td>4</td>
+                  <td>3</td>
                 </tr>
                 <tr>
                   <td>S/D</td>
@@ -559,3 +561,4 @@
   </div>
 </div>
 
+<div id="root"></div>
