--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -559,6 +559,190 @@
             </table>
     </div>
   </div>
+  <!-- last one starts-->
+    <div class="row">
+    <div class="col-md-4">
+      <div class="info-box text-center">
+          25
+      </div>
+      <div class="date-container">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <span>Dic 18 - Dic 24 2017</span>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Día</th>
+                  <th>Tareas</th>
+                  <th>Proyectos</th>
+                  <th>Trabajo</th>
+                  <th>En la escuela</th>
+                  <th>En la casa</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>L</td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>M</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>J</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>V</td>
+                    <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>
+                    <span class="checkmark">
+                      <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                  </td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>S/D</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
+  <!-- last one ends -->
 </div>
 
 <div id="root"></div>
